samples/_failures_safe/1761352523_9fb9f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7572ffb0.c: In function ‘main’:
./samples/SAFE/__tmp_7572ffb0.c:181:5: error: expected expression at end of input
  181 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_7572ffb0.c:181:5: error: expected declaration or statement at end of input
